librbd: deep-copy should not write to objects that cannot exist

If an image has a snapshot and is subsequently shrunk, ensure that
discard ops are not sent to the deep-copy objects beyond the bounds
of the image at a given snapshot/HEAD. Only a remove op should be
expected in such cases.

Fixes: http://tracker.ceph.com/issues/25000
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit fbd6ea1ffd4befe0b13213be9bc17808ff89a85e)